Adjust legend, time marks and headline spacing, fix healine text on reset function

--- a/styles/assets/section-timer.sass
+++ b/styles/assets/section-timer.sass
@@ -1,11 +1,13 @@
 .main_section-headline
   font-size: 18px
-  margin-right: 40px
   margin-bottom: 16px
+  margin-right: 40px
   float: right
+
 .main__section-timer
   margin-top: -249px
   margin-left: 240px
+
 .main__timer-border
   display: inline-block
   padding: 11px 32px 8px 32px
@@ -18,7 +20,7 @@
     margin-right: 92px
     font-size: 10px
 
-#time-tag-5
+#time-mark-4
   margin-right: 0
 
 .main__timer-wrapper
@@ -45,7 +47,6 @@
 
 .main__timer-legend
   float: right
-  padding-right: 32px
   padding-top: 6px
 
 .legend-text
